[SUREFIRE-2015] Implement testRunId and RunMode in the SimpleReportEntry